Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-530

Cassandra SE: Locking is incorrect

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • None
    • None
    • None

    Description

      I was loading data into Cassandra, and tried to select from it at the same time. I got the following:

      MariaDB [test]> show processlist;
      +----+------+-----------------+------+---------+------+------------------------------+------------------------------------------------------------------------------------------------------+----------+
      | Id | User | Host            | db   | Command | Time | State                        | Info                                                                                                 | Progress |
      +----+------+-----------------+------+---------+------+------------------------------+------------------------------------------------------------------------------------------------------+----------+
      |  1 | root | localhost       | dbt3 | Sleep   | 1983 |                              | NULL                                                                                                 |    0.000 |
      |  2 | root | localhost:38568 | dbt3 | Query   |  326 | reading file                 | LOAD DATA INFILE '/home/ubuntu/dbt3-1.9/s1-cassandra/lineitem.tbl' into table lineitem fields termin |   14.660 |
      |  3 | root | localhost:38587 | dbt3 | Query   |  144 | Waiting for table level lock | select * from lineitem limit 1                                                                       |    0.000 |
      |  4 | root | localhost:38590 | test | Query   |    0 | NULL                         | show processlist                                                                                     |    0.000 |
      +----+------+-----------------+------+---------+------+------------------------------+------------------------------------------------------------------------------------------------------+----------+

      Is the engine too strict on locking?

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              psergei Sergei Petrunia
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.