MDEV-530: Cassandra SE: Locking is incorrect - Use more permissive locking.